[package]
name = "supermega"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15.0"
reqwest = "0.11.14"
tokio = { version = "1.25.0", features = ["full"] }
serde_json = "1.0.93"
